fixes overflow

--- a/src/features/interview/interviewStyles.module.scss
+++ b/src/features/interview/interviewStyles.module.scss
@@ -4,3 +4,7 @@
   flex-direction: column;
   height: 100vh;
 }
+
+.questionCard {
+  overflow: unset;
+}
